# tuwunel

./: .gitignore  CLAUDE.md  Cargo.toml  tuwunel-example.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/milestones/v1.0-phases/01-shadow-infrastructure/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md
.planning/milestones/v1.0-phases/02-cs-api-and-e2ee-tests/: 02-01-PLAN.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/milestones/v1.0-phases/03-network-conditions-and-load/: 03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/milestones/v1.0-phases/04-embed-crate/: 04-02-PLAN.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/01-shadow-infrastructure/: 01-01-SUMMARY.md  01-03-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-cs-api-and-e2ee-tests/: 02-01-SUMMARY.md  02-04-PLAN.md  02-DISCUSSION-LOG.md
.planning/phases/03-network-conditions-and-load/: 03-01-PLAN.md  03-CONTEXT.md  03-DISCUSSION-LOG.md
.planning/phases/04-embed-crate/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/admin/: Cargo.toml
src/admin/debug/: commands.rs
src/admin/federation/: commands.rs  mod.rs
src/admin/media/: commands.rs  mod.rs
src/api/client/: context.rs  push.rs  redact.rs  report.rs  send.rs  threads.rs  utils.rs
src/api/client/room/: upgrade.rs
src/api/client/session/: appservice.rs
src/api/server/: invite.rs  query.rs  send.rs
src/core/config/: mod.rs
src/core/error/: mod.rs
src/embed/: Cargo.toml
src/embed/src/: client.rs  config.rs  error.rs  lib.rs
src/main/: Cargo.toml  lib.rs  logging.rs  runtime.rs
src/router/: layers.rs  mod.rs  request.rs  run.rs
src/service/media/: preview.rs
src/service/rooms/alias/: mod.rs
tests/shadow/: Cargo.toml
tests/shadow/src/: lib.rs  runner.rs
tests/shadow/src/config/: mod.rs  shadow.rs  tuwunel.rs
tests/shadow/src/scenarios/: common.rs  cs_api.rs  e2ee_msg.rs  federation.rs  load_test.rs  mod.rs  partition.rs  resilience.rs  resync.rs  sas_verify.rs
tests/shadow/tests/: cs_api.rs  e2ee.rs  federation.rs  load.rs  net_impairment.rs  resilience.rs  sas_verify.rs  smoke.rs
tests/shadow/tests/common/: mod.rs
