[package]
name = "tuwunel-embed"
categories.workspace = true
description = "Embeddable tuwunel homeserver for in-process testing"
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.cargo-machete]
ignored = ["log"]

[dependencies]
log = { workspace = true }
figment = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
tuwunel-core = { workspace = true }
tuwunel-router = { workspace = true }
tuwunel-service = { workspace = true }
tuwunel = { package = "tuwunel", path = "../main", default-features = false }
