[package]
name = "shadow-test-harness"
edition.workspace = true
version.workspace = true
publish = false

[dependencies]
clap = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["rustls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
serde_yaml = { workspace = true }
ruma = { workspace = true, features = ["client-api", "rand"] }
tempfile = "3"
tokio = { workspace = true }
urlencoding = "2"
toml = { workspace = true, features = ["display"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }

[[bin]]
name = "matrix-test-client"
path = "src/bin/matrix_test_client.rs"
